--- a/timetable/style.css
+++ b/timetable/style.css
@@ -91,7 +91,7 @@ body {
 
 .numberLesson {
 	line-height: .6;
-	font-size: 14px;
+	font-size: 12px;
 	width: 30px;
 }
 .oneLessonElems .numberLesson {
@@ -140,7 +140,7 @@ body {
 	background-color: #ffffff;
 	border-radius: 40px 40px 0 0;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
 	align-items: center;
 	transition: transform .3s linear;
 }
@@ -151,4 +151,11 @@ body {
 .popupToday.down {
 	transition: transform .3s linear;
 	transform: translateY(30vh);
+}
+.closePopupLine {
+	width: 60px;
+	height: 3px;
+	border-radius: 8px;
+	background-color: #404040;
+	margin: 10px 0 20px 0;
 }
