--- a/timetable/style.css
+++ b/timetable/style.css
@@ -152,10 +152,16 @@ body {
 	transition: transform .3s linear;
 	transform: translateY(30vh);
 }
+.innerToday {
+	font-size: 13px;
+	opacity: .7;
+}
 .closePopupLine {
+	opacity: .8;
 	width: 60px;
 	height: 3px;
 	border-radius: 8px;
 	background-color: #404040;
 	margin: 10px 0 20px 0;
 }
+p {margin: 0;}
