--- a/timetable/style.css
+++ b/timetable/style.css
@@ -165,3 +165,15 @@ body {
 	margin: 10px 0 20px 0;
 }
 p {margin: 0;}
+
+
+.blackOpac {
+	top: 0;
+	left: 0;
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	background-color: #000;
+	opacity: .2;
+	transition: .3s;
+}
