--- a/timetable/style.css
+++ b/timetable/style.css
@@ -3,9 +3,12 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	background: rgba(196, 196, 196, 0.2);
 }
-
+.main {
+	z-index: 0;
+}
 .dayElemBlock {
-	padding:  10px 10px 0 10px;
+	padding:  10px;
+	margin: 0 0 20px 0;
 	background-color: #fff;
 }
 .groupName {
@@ -38,7 +41,7 @@ body {
 .lessonsElem {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: center;
 	width: 100%;
 }
 
@@ -133,12 +136,13 @@ body {
 
 
 .popupToday {
+	z-index: 999;
 	position: fixed;
 	width: 94vw;
-	height: 30vh;
-	margin: 40vh 0 0 0;
+	height: 40vh;
+	margin: 70vh 0 0 0;
 	background-color: #ffffff;
-	border-radius: 40px 40px 0 0;
+	border-radius: 30px 30px 0 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -153,9 +157,26 @@ body {
 	transform: translateY(30vh);
 }
 .innerToday {
-	font-size: 13px;
+	z-index: 998;
+	font-size: 16px;
 	opacity: .7;
 }
+.now {
+	z-index: 997;
+	margin: 10px 0 0 0;
+	font-size: 24px;
+}
+
+.leftTimeBlock {
+	margin: 60px 0 0 0;
+	font-synthesis: 10px;
+	opacity: .6;
+	display: flex;
+}
+.leftTime {
+	margin: 0 0 0 6px;
+}
+
 .closePopupLine {
 	opacity: .8;
 	width: 60px;
@@ -168,15 +189,25 @@ p {margin: 0;}
 
 
 .blackOpac {
+	z-index: 0;
 	top: 0;
 	left: 0;
 	position: fixed;
 	width: 100vw;
 	height: 100vh;
-	background-color: #000;
-	opacity: .2;
+	background-color: rgba(0, 0, 0, 0.1);
+	/*opacity: .2;*/
 	transition: .3s;
 }
-div{
-	
+.popupOpenBtn {
+	display: flex;
+	justify-content: center;
+	position: fixed;
+	width: 100vw;
+	top: 90vh;
+	transition: 1s;
+	cursor: pointer;
+}
+.popupOpenBtnNone {
+	display: none;
 }
