--- a/timetablev2/style.css
+++ b/timetablev2/style.css
@@ -4,6 +4,23 @@ body {
 	font-family: 'Montserrat', sans-serif;
 }
 
+::-webkit-scrollbar {
+	width: 6px;
+}
+
+::-webkit-scrollbar-track {
+	background: #232C33;
+  	border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #3c4a54;
+  	border-radius: 20px;
+}
+::-webkit-scrollbar-thumb:hover {
+	background: #516470;
+}
+
 a {
 	text-decoration: none;
 }
@@ -23,18 +40,6 @@ a {
 	justify-content: center;
 	overflow: auto;
 }
-html::-webkit-scrollbar {
-      width: 20px; 
-   }
-
-html::-webkit-scrollbar-track {
-    background-color: black;
-  }
-
-html::-webkit-scrollbar-thumb {
-    background: #4e4e4e;
-    border-radius: 25px;
-  }
 
 .day_name {
 	margin: 0 0 10px 0;
@@ -62,6 +67,7 @@ html::-webkit-scrollbar-thumb {
 	justify-content: center;
 	align-items: center;
 	margin: 0 0 14px 0;
+	transition: width .1s;
 }
 .lesson_back {
 	background-color: #151515;
@@ -71,7 +77,7 @@ html::-webkit-scrollbar-thumb {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	transition: .2s;
+	transition: background .2s, width .1s;
 }
 .lesson_back:hover {
 	background-color: #292929;
@@ -87,7 +93,20 @@ html::-webkit-scrollbar-thumb {
 	font-weight: 700;
 	color: #fff;
 	opacity: .6;
+}
+.empty_lesson1 {
+	font-size: 20px;
+	font-weight: 700;
+	color: #fff;
+	opacity: .6;
 	margin: 10px 0 10px 0;
+}
+.empty_lesson2 {
+	font-size: 20px;
+	font-weight: 700;
+	color: #fff;
+	opacity: .6;
+	margin: 0 0 10px 0;
 }
 
 .lesson_block_double {
@@ -96,22 +115,12 @@ html::-webkit-scrollbar-thumb {
 	border-radius: 20px;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-around;
 	flex-direction: column;
 	margin: 0 0 14px 0;
+	transition: width .1s;
 }
 .lesson1 {
-	margin: 10px 0 0 0;
-	background-color: #151515;
-	width: 240px;
-	height: 32px;
-	border-radius: 15px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	transition: .2s;
-}
-.lesson2 {
 	margin: 10px 0 10px 0;
 	background-color: #151515;
 	width: 240px;
@@ -120,7 +129,18 @@ html::-webkit-scrollbar-thumb {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	transition: .2s;
+	transition: background .2s, width .1s;
+}
+.lesson2 {
+	margin: 0 0 10px 0;
+	background-color: #151515;
+	width: 240px;
+	height: 32px;
+	border-radius: 15px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: background .2s, width .1s;
 }
 .lesson_back1:hover {
 	background-color: #292929;
@@ -136,6 +156,7 @@ html::-webkit-scrollbar-thumb {
 	width: 40vw;
 	height: 100vh;
 	display: flex;
+	box-shadow: -2px 0px 35px 7px rgba(20, 28, 34, 0.72);
 }
 
 .lesson_more {
@@ -211,4 +232,40 @@ html::-webkit-scrollbar-thumb {
 	margin-top: -1px;
 	background-color: #8AAA85;
 }
+
+
+
+.docs_view {
+	background: #fff;
+	position: fixed;
+	width: 40vw;
+	height: 100vh;
+	top: 0;
+	left: 100vw;
+	/*left: 71vw;*/
+	display: none;
+	flex-direction: column;
+	padding: 20px;
+	z-index: 999;
+	transition: .2s;
+}
+.doc {
+	margin: 6px 0 0 0;
+	display: flex;
+	justify-content: space-between;
+}
+.doc_name {
+
+}
+.doc_download {
+	font-size: 17px;
+	cursor: pointer;
+}
+
+.back {
+	font-weight: 800;
+	font-size: 18px;
+	cursor: pointer;
+}
+
 
